<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@mipmap/icon_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_margin="20dp"
            android:src="@drawable/icon_chuji_mind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/practice_mind_start"
            android:text="@string/tv_mind_start"
            android:textSize="20sp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/practice_mind_next"
            android:background="@drawable/login_btn_style"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:text="@string/btn_mind_next"
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true" />

        <Button
            android:id="@+id/practice_mind_out"
            android:background="@drawable/login_btn_style"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:text="@string/btn_out_mind"
            android:layout_margin="10dp"
            android:layout_toLeftOf="@+id/practice_mind_next"
            android:layout_alignParentBottom="true" />

        <TextView
            android:id="@+id/practice_mind_hit"
            android:text="@string/tv_mind_hit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
    <FrameLayout
        android:id="@+id/practice_mind"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>