<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@mipmap/icon_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/registered_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_scrollFlags="scroll|enterAlways|snap">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="注册"
                android:textColor="@color/white"
                android:textSize="20sp"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="20dp">
            <com.ygxy.xqm.huli.myview.DIYEditTextId
                android:id="@+id/registered_id"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@null"
                android:inputType="number"
                android:layout_marginTop="30dp"
                android:drawablePadding="5dp"
                android:hint="@string/hit_id"
                android:maxLength="10"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"/>
            <com.ygxy.xqm.huli.myview.DIYEditTextAccount
                android:id="@+id/registered_nickname"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@null"
                android:inputType="text"
                android:layout_marginTop="20dp"
                android:drawablePadding="5dp"
                android:hint="@string/hit_nickname"
                android:padding="10dp"
                android:maxLength="11"
                android:layout_gravity="center_horizontal"/>

            <com.ygxy.xqm.huli.myview.DIYEditTextAccount
                android:id="@+id/registered_phone"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@null"
                android:inputType="phone"
                android:layout_marginTop="20dp"
                android:drawablePadding="5dp"
                android:hint="@string/hit_phone"
                android:padding="10dp"
                android:maxLength="11"
                android:layout_gravity="center_horizontal"/>
            <com.ygxy.xqm.huli.myview.DIYEditTextPWD
                android:id="@+id/registered_password"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@null"
                android:layout_marginTop="20dp"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:hint="@string/hit_pwd"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"/>
            <com.ygxy.xqm.huli.myview.DIYEditTextPWD
                android:id="@+id/registered_reset_password"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:background="@null"
                android:layout_marginTop="20dp"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:hint="@string/hit_res_pwd"
                android:padding="10dp"
                android:layout_gravity="center_horizontal"/>
            <RelativeLayout
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:layout_width="300dp"
                android:layout_height="40dp">
                <EditText
                    android:id="@+id/registered_code"
                    android:layout_width="180dp"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:gravity="center"
                    android:background="@drawable/edittext_background"
                    android:hint="@string/hit_identifying_code" />
                <Button
                    android:id="@+id/registered_btn_code"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/btn_identifying_code"
                    android:background="@drawable/login_btn_style"/>
            </RelativeLayout>
            <Button
                android:id="@+id/registered_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:layout_gravity="center"
                android:clickable="false"
                android:background="@mipmap/icon_register"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>